# ABG_Webapp

./: .env.example  README.md
.github/workflows/: Add GitHub Pages frontend deployment workflow  deploy-frontend-pages.yml
backend/: pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: cases.py  workflow.py
backend/app/services/: gmail_service.py  material_code_service.py  mdm_gpt_service.py  sharepoint_mapping.py  sharepoint_service.py  workflow_service.py
backend/app/templates/: email_clarification.txt  email_duplicate.txt  email_final_result.txt  mdm_gpt_prompt.txt
backend/app/utils/: normalization.py  validation.py
backend/tests/: test_material_code.py  test_normalization.py  test_validation_and_mapping.py  test_workflow_paths.py
docs/: architecture.md  preview.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChangelogModal.jsx
frontend/src/lib/: api.js
frontend/src/styles/: index.css
scripts/: import_abg_master_live.py
shared/: schemas.md
