[project]
name = "abg-web-app-backend"
version = "0.1.0"
description = "ABG Web App backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
